--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -3,11 +3,16 @@
 	padding 0
 	outline none
 body
-	font-size: 
-	font-family: 
-	color 
-	background-color 
-	line-height: 
+	font-size: 16px
+	font-family: I
+	color #000
+	background-color #fff
+	line-height: 1.1
+.wrapper
+	overflow hidden
+.content
+	position relative
+	z-index 60
 a
 	color: #000
 	&:focus
@@ -61,17 +66,28 @@ footer
 		cursor pointer
 		margin 0 auto
 .button
-	display block
+	display inline-block
 	text-align center
-	margin 0 auto
+	margin 0
 	text-decoration none
-	color: rgb(255, 255, 255);
+	color: #fff
 	width: 100%
+	font-size: 18px
+	font-weight: bold
+	padding: 16px 54px
+	background-color: #C77E55
+	border-radius: 15px
+	@media screen and (max-width 991px)
+		width 100%
+		max-width 550px
+		margin 0 auto
 	&:focus
 		text-decoration none
-		color 
+		color #fff
 	&:hover
 		text-decoration none
-		color 
+		color #fff
 .general-title
-	text-align center
+	font-family: FSE
+	font-size: 36px
+	margin-bottom: 80px
