--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -71,7 +71,7 @@ footer
 	margin 0
 	text-decoration none
 	color: #fff
-	width: 100%
+	width: auto
 	font-size: 18px
 	font-weight: bold
 	padding: 16px 54px
