--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -14,6 +14,7 @@
 @import 'main/4-for'
 @import 'main/5-why'
 @import 'main/6-author'
+@import 'main/7-revs'
 @import 'base/4-footer'
 .mobile-menu
 	display: none;
