--- a/css/styles.css
+++ b/css/styles.css
@@ -459,7 +459,7 @@ footer {
   margin: 0;
   text-decoration: none;
   color: #fff;
-  width: 100%;
+  width: auto;
   font-size: 18px;
   font-weight: bold;
   padding: 16px 54px;
