Main page is stylezed

--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -2,9 +2,10 @@ section#main
 	.container
 		include ../base/1-header
 		p.main-pre Онлайн практикум
-		h1.main-title
-			span Проективный метод современной психологии
-			| Метафорические ассоциативные карты”
+		h1.main-title Проективный метод современной психологии
+			span Метафорические 
+				br.mob-none
+				| ассоциативные карты”
 		p.main-date
 			span 11.11.24 - 11.11.24
 			span 19:00
