--- a/_app/pug/main/2-plan.pug
+++ b/_app/pug/main/2-plan.pug
@@ -6,7 +6,7 @@ mixin d(n, h4, p, ...items)
 			p.day-text!=p
 			ul.general-list
 				each item in items
-					li=item
+					li!=item
 
 section#plan
 	.container
