--- a/_app/pug/main/4-for.pug
+++ b/_app/pug/main/4-for.pug
@@ -10,7 +10,7 @@ section#for
 				+fi('','for','3', 'Экологично извлекают необходимую информацию, не&nbsp;насилуя психику.')
 		.row
 			.col-md-4
-				+fi('','for','4', 'Подходят для&bsp;выстраивания доверительных отношений и коммуникаций с&bsp;детьми, через ассоциации вы узнаете о&bsp;своем ребенке больше, чем через “разговор по&bsp;душам”.')
+				+fi('','for','4', 'Подходят для&nbsp;выстраивания доверительных отношений и коммуникаций с&nbsp;детьми, через ассоциации вы узнаете о&nbsp;своем ребенке больше, чем через “разговор по&nbsp;душам”.')
 			.col-md-4
 				+fi('','for','5', 'Возможность проводить самоанализ и находить ответы в&nbsp;сложных кризисных ситуациях.')
 			.col-md-4
