--- a/_app/pug/main/6-author.pug
+++ b/_app/pug/main/6-author.pug
@@ -2,9 +2,9 @@ section#author
 	.container
 		.row
 			.col-md-5.col-md-push-7
-				+img('author-img', 'img/images/janna.png', 'Жанна АБрамова')
+				+img('author-img', 'img/images/janna.png', 'Жанна Абрамова')
 			.col-md-7.col-md-pull-5
-				+gt('', 'Жанна Абрамова')
+				+gt('general-title-author', 'Жанна Абрамова')
 				ul.general-list
 					li
 						span Психотерапевт, клинический психолог
@@ -23,4 +23,6 @@ section#author
 					li
 						span Коуч, тренер
 						| обучающих и трансформационных программ
-				p.author-item SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».
+				p.author-item SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: 
+					br.mob-none
+					| «Лучший бизнес расстановщик года».
