--- a/_app/pug/main/3-video.pug
+++ b/_app/pug/main/3-video.pug
@@ -1,7 +1,8 @@
 section#video
 	.container
-		.video-wrapper.video-wrapper-video
-			+img('', 'img/images/video.png', 'Видео')
+		.video-wrapper.video-wrapper-video(data-youtube='wL8DVHuWI7Y' )
+			div
+			//- +img('', 'img/images/video.png', 'Видео')
 		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
 			span Авторскую колоду метафорических карт
 		+b('', href, 'Принять участие')
