--- a/_app/pug/main/7-revs.pug
+++ b/_app/pug/main/7-revs.pug
@@ -5,5 +5,5 @@ section#revs
 			each n in [1,2,3,4,5,6,7,8]
 				a.text-rev-link(href=path+"img/revs/text-"+n+".jpg" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".min.jpg", alt="Отзыв "+n).text-rev-img
 		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
-			span Авторскую колоду метафорических карт
+			span.gs-brown Авторскую колоду метафорических карт
 		+b('', href, 'Зарегистрироваться')
