--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -91,3 +91,28 @@ footer
 	font-family: FSE
 	font-size: 36px
 	margin-bottom: 80px
+	color #73431F
+.mob-none
+	@media screen and (max-width 991px)
+		display none
+.general-subtitle
+	font-size: 18px
+	margin: 60px 0 20px
+	span
+		display block
+		color #77CEB4
+		font-weight: bold
+		text-transform uppercase
+		&.gs-brown
+			color #C77E55
+.general-list
+	margin-left: 30px
+	@media screen and (max-width 386px)
+		margin-left: 15px
+	li
+		position relative
+		margin-bottom: 15px
+		span
+			font-weight: bold
+		&:last-child
+			margin-bottom: 0
