--- a/css/styles.css
+++ b/css/styles.css
@@ -485,6 +485,43 @@ footer {
   font-family: 'FreeSetExtraCTTRegular', sans-serif;
   font-size: 36px;
   margin-bottom: 80px;
+  color: #73431f;
+}
+@media screen and (max-width: 991px) {
+  .mob-none {
+    display: none;
+  }
+}
+.general-subtitle {
+  font-size: 18px;
+  margin: 60px 0 20px;
+}
+.general-subtitle span {
+  display: block;
+  color: #77ceb4;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.general-subtitle span.gs-brown {
+  color: #c77e55;
+}
+.general-list {
+  margin-left: 30px;
+}
+@media screen and (max-width: 386px) {
+  .general-list {
+    margin-left: 15px;
+  }
+}
+.general-list li {
+  position: relative;
+  margin-bottom: 15px;
+}
+.general-list li span {
+  font-weight: bold;
+}
+.general-list li:last-child {
+  margin-bottom: 0;
 }
 header {
   overflow: hidden;
@@ -502,8 +539,229 @@ header {
 .fixed {
   position: fixed;
 }
+#main {
+  padding: 0 0 60px;
+  background: #252a26 url("../img/backs/main.png") no-repeat center center;
+  background-size: cover;
+  color: #fff;
+}
+.main-pre {
+  font-size: 28px;
+  display: inline-block;
+  border-bottom: 2px solid #55b196;
+  padding-bottom: 5px;
+  margin-top: 75px;
+}
+.main-title {
+  font-family: 'Inter', sans-serif;
+  font-size: 28px;
+  text-transform: none;
+  margin: 30px 0;
+}
+.main-title span {
+  font-family: 'FreeSetExtraCTTRegular', sans-serif;
+  font-size: 48px;
+  text-transform: uppercase;
+  position: relative;
+  display: block;
+}
+.main-title span:before {
+  content: '”';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -30px;
+}
+.main-date {
+  font-size: 24px;
+  font-weight: 900;
+  color: #55b196;
+  line-height: 52px;
+}
+.main-date span {
+  display: inline-block;
+}
+.main-date span:last-of-type {
+  margin-left: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+.main-date span:last-of-type:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 2px;
+  background-color: #fff;
+}
+.main-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  max-width: 460px;
+  margin: 20px 0 60px;
+}
+.main-text img {
+  margin-right: 20px;
+}
+.main-text p {
+  font-size: 18px;
+  margin-top: -22px;
+}
+.main-text p span {
+  font-weight: bold;
+}
+#plan {
+  padding: 90px 0;
+}
+.day {
+  border-radius: 15px;
+  border: 2px solid #c77e55;
+  padding: 115px 20px 20px 20px;
+  position: relative;
+  min-height: 570px;
+  margin-bottom: 30px;
+}
+.day-num {
+  position: absolute;
+  font-family: 'FreeSetExtraCTTRegular', sans-serif;
+  font-size: 28px;
+  color: #77ceb4;
+  top: 20px;
+  right: 20px;
+}
+.day-title {
+  font-size: 26px;
+  font-weight: bold;
+  color: #c77e55;
+  min-height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.day-text {
+  margin: 10px 0 15px;
+}
+#video {
+  padding: 60px 0;
+}
+.video-wrapper-video {
+  background: #000 url("../img/images/video.png") no-repeat center center;
+  background-size: cover;
+  cursor: pointer;
+}
+#for,
+#why {
+  padding: 60px 0;
+}
+.for-item {
+  position: relative;
+  border-radius: 15px;
+  background-color: #ccede3;
+  margin-top: 70px;
+  padding: 70px 70px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  min-height: 270px;
+}
+.for-item-deepgreen {
+  background-color: #55b196;
+  color: #fff;
+  padding: 70px 40px 40px;
+}
+.for-item-img {
+  position: absolute;
+  display: block;
+  top: -56px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+#author {
+  padding: 60px 0 90px;
+}
+.general-title-author {
+  margin-top: 60px;
+}
+.author-item {
+  border-radius: 15px;
+  background-color: #77ceb4;
+  padding: 60px 35px;
+  color: #fff;
+  font-weight: 900;
+  margin-top: 80px;
+  line-height: 1.5;
+}
+#revs {
+  padding: 90px 0;
+  background-color: #ccede3;
+}
+.revs-slider-text {
+  width: 88%;
+  margin: 0 auto;
+}
+.slick-list {
+  border-radius: 15px;
+}
+.text-rev-img {
+  height: 182px;
+  width: 480px;
+  background-color: #fff;
+  border-radius: 15px;
+  display: block;
+  margin: 0 auto;
+}
+.slick-next,
+.slick-prev {
+  width: 52px;
+  height: 52px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.slick-next:before,
+.slick-prev:before {
+  content: none;
+}
+.slick-next {
+  background-image: url("../img/icons/next.svg");
+  right: -65px;
+}
+.slick-next:focus,
+.slick-next:hover {
+  background-image: url("../img/icons/next.svg");
+}
+.slick-prev {
+  background-image: url("../img/icons/prev.svg");
+  left: -65px;
+}
+.slick-prev:focus,
+.slick-prev:hover {
+  background-image: url("../img/icons/prev.svg");
+}
 footer {
-  padding: 20px 0 15px;
+  padding: 40px 0;
   font-size: 13px;
 }
 @media screen and (max-width: 991px) {
