Main page adapting tablets

--- a/_app/pug/base/1-header.pug
+++ b/_app/pug/base/1-header.pug
@@ -11,7 +11,7 @@ header
 	//- 			a(href='#authors') Эксперт
 	//- 		li
 	//- 			a(href='#revs') Отзывы
-	.mobile-menu
-		.mobile-menu-line.mobile-menu-line-1
-		.mobile-menu-line.mobile-menu-line-2
-		.mobile-menu-line.mobile-menu-line-3
+	//- .mobile-menu
+	//- 	.mobile-menu-line.mobile-menu-line-1
+	//- 	.mobile-menu-line.mobile-menu-line-2
+	//- 	.mobile-menu-line.mobile-menu-line-3
