--- a/_app/styl/main/4-for.styl
+++ b/_app/styl/main/4-for.styl
@@ -12,10 +12,15 @@
 	justify-content: center
 	text-align center
 	min-height 270px
+	@media screen and (max-width 1199px)
+		padding 70px 40px 40px
+	@media screen and (max-width 991px)
+		min-height 1px
 	&-deepgreen
 		background-color: #55B196
 		color #fff
 		padding 70px 40px 40px
+		font-weight: 600
 	&-img
 		position absolute
 		display block
