--- a/_app/pug/main/6-author.pug
+++ b/_app/pug/main/6-author.pug
@@ -2,27 +2,29 @@ section#author
 	.container
 		.row
 			.col-md-5.col-md-push-7
+				+gt('general-title-author-mob', 'Жанна Абрамова')
 				+img('author-img', 'img/images/janna.png', 'Жанна Абрамова')
 			.col-md-7.col-md-pull-5
 				+gt('general-title-author', 'Жанна Абрамова')
-				ul.general-list
-					li
-						span Психотерапевт, клинический психолог
-					li
-						span Более 15&nbsp;лет
-						|  практической работы
-					li
-						span Более 10&nbsp;000
-						|  выпускников окончивших курсы и обучающие программы
-					li
-						span Эксперт
-						|  федеральных каналов
-					li
-						span Ведущий преподаватель
-						|  “Института современной психологии”
-					li
-						span Коуч, тренер
-						| обучающих и трансформационных программ
-				p.author-item SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: 
-					br.mob-none
-					| «Лучший бизнес расстановщик года».
+				.author-info
+					p.author-item SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: 
+						br
+						| «Лучший бизнес расстановщик года».
+					ul.general-list
+						li
+							span Психотерапевт, клинический психолог
+						li
+							span Более 15&nbsp;лет
+							|  практической работы
+						li
+							span Более 10&nbsp;000
+							|  выпускников окончивших курсы и обучающие программы
+						li
+							span Эксперт
+							|  федеральных каналов
+						li
+							span Ведущий преподаватель
+							|  “Института современной психологии”
+						li
+							span Коуч, тренер
+							| обучающих и трансформационных программ
