--- a/_app/pug/main/7-revs.pug
+++ b/_app/pug/main/7-revs.pug
@@ -4,6 +4,8 @@ section#revs
 		.revs-slider-text
 			each n in [1,2,3,4,5,6,7,8]
 				a.text-rev-link(href=path+"img/revs/text-"+n+".jpg" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".min.jpg", alt="Отзыв "+n).text-rev-img
+section#last
+	.container
 		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
 			span.gs-brown Авторскую колоду метафорических карт
 		+b('', href, 'Зарегистрироваться')
