--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -8,6 +8,8 @@ body
 	color #000
 	background-color #fff
 	line-height: 1.1
+	@media screen and (max-width 650px)
+		font-size: 22px
 .wrapper
 	overflow hidden
 .content
@@ -81,6 +83,10 @@ footer
 		width 100%
 		max-width 550px
 		margin 0 auto
+		display block
+	@media screen and (max-width 650px)
+		font-size: 22px
+		padding 25px 20px
 	&:focus
 		text-decoration none
 		color #fff
@@ -98,6 +104,8 @@ footer
 .general-subtitle
 	font-size: 18px
 	margin: 60px 0 20px
+	@media screen and (max-width 991px)
+		text-align center
 	span
 		display block
 		color #77CEB4
