--- a/_app/styl/base/3-header.styl
+++ b/_app/styl/base/3-header.styl
@@ -6,6 +6,7 @@ header
 	float left
 	@media screen and (max-width 991px)
 		float: none
+		width 200px
 // .header-menu
 // 	float: right
 // 	text-align center
@@ -41,5 +42,5 @@ header
 // 			&:focus
 // 			&:hover
 // 				color #000
-.fixed
-	position fixed
+// .fixed
+// 	position fixed
