--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -3,6 +3,8 @@
 	background: #252A26 url(../img/backs/main.png) no-repeat center center
 	background-size: cover
 	color #fff
+	@media screen and (max-width 650px)
+		background-image: url(../img/backs/main-mob.png)
 .main
 	&-pre
 		font-size: 28px
@@ -10,24 +12,36 @@
 		border-bottom: 2px solid #55B196
 		padding-bottom: 5px
 		margin-top: 75px
+		@media screen and (max-width 991px)
+			margin-top: 0
+		@media screen and (max-width 650px)
+			font-size: 22px
 	&-title
 		font-family: I
 		font-size: 28px
 		text-transform none
 		margin 30px 0
+		@media screen and (max-width 650px)
+			font-size: 22px
 		span
 			font-family: FSE
 			font-size: 48px
 			text-transform uppercase
 			position relative
 			display block
+			padding-top: 5px
+			@media screen and (max-width 650px)
+				font-size: 42px
 			&:before
 				content: '”'
 				display block
-				position absolute
+				position relative
 				top 0
 				left -30px
-
+				@media screen and (max-width 650px)
+					top 0
+					display inline-block
+					left 0
 	&-date
 		font-size: 24px
 		font-weight: 900
@@ -55,10 +69,14 @@
 		width 100%
 		max-width 460px
 		margin 20px 0 60px
+		@media screen and (max-width 650px)
+			max-width none
 		img
 			margin-right: 20px
 		p
 			font-size: 18px
 			margin-top: -22px
+			@media screen and (max-width 650px)
+				font-size: 22px
 			span
 				font-weight: bold
