--- a/_app/styl/main/2-plan.styl
+++ b/_app/styl/main/2-plan.styl
@@ -1,5 +1,7 @@
 #plan
 	padding 90px 0
+	@media screen and (max-width 650px)
+		padding 90px 0 0
 .day
 	border-radius: 15px
 	border: 2px solid #C77E55
@@ -7,6 +9,11 @@
 	position relative
 	min-height 570px
 	margin-bottom: 30px
+	@media screen and (max-width 1199px)
+		min-height 665px
+	@media screen and (max-width 991px)
+		min-height 1px
+		padding 115px 20px 30px 20px
 	&-num
 		position absolute
 		font-family: FSE
@@ -21,5 +28,7 @@
 		min-height 90px
 		display flex
 		align-items: center
+		@media screen and (max-width 650px)
+			font-size: 36px
 	&-text
 		margin: 10px 0 15px
