--- a/_app/styl/main/6-author.styl
+++ b/_app/styl/main/6-author.styl
@@ -2,11 +2,34 @@
 	padding 60px 0 90px
 .general-title-author
 	margin-top: 60px
+	@media screen and (max-width 1199px)
+		margin-top: 0
+	@media screen and (max-width 991px)
+		display none
+.general-title-author-mob
+	display block
+.author-img
+	display block
+	width 100%
+	max-width 453px
+	margin 0 auto
+.author-info
+	display flex
+	flex-direction: column-reverse
+	align-content: space-between
+	@media screen and (max-width 991px)
+		display block
 .author-item
 	border-radius: 15px
 	background-color: #77CEB4
 	padding 60px 35px
 	color #fff
 	font-weight: 900
-	margin-top: 80px
+	margin-top: 77px
 	line-height: 1.5
+	@media screen and (max-width 1199px)
+		margin-top: 30px
+	@media screen and (max-width 991px)
+		margin 20px 0 50px
+	@media screen and (max-width 650px)
+		font-size: 24px
