--- a/_app/styl/main/7-revs.styl
+++ b/_app/styl/main/7-revs.styl
@@ -1,9 +1,13 @@
 #revs
-	padding 90px 0
+	padding 90px 0 0
 	background-color: #CCEDE3
+	@media screen and (max-width 650px)
+		padding 60px 0
 .revs-slider-text
 	width 88%
 	margin 0 auto
+	@media screen and (max-width 767px)
+		width 100%
 .slick-list
 	border-radius: 15px
 .text-rev-img
@@ -13,6 +17,14 @@
 	border-radius: 15px
 	display block
 	margin: 0 auto
+	@media screen and (max-width 626px)
+		width 400px
+	@media screen and (max-width 535px)
+		width 300px
+	@media screen and (max-width 438px)
+		width 200px
+	@media screen and (max-width 338px)
+		width 150px
 .slick-next, .slick-prev
 	&:before
 		content: none
@@ -24,12 +36,22 @@
 .slick-next
 	background-image: url(../img/icons/next.svg)
 	right: -65px
+	@media screen and (max-width 767px)
+		right 0
 	&:focus
 	&:hover
 		background-image: url(../img/icons/next.svg)
 .slick-prev
 	background-image: url(../img/icons/prev.svg)
 	left -65px
+	@media screen and (max-width 767px)
+		left 0
 	&:focus
 	&:hover
 		background-image: url(../img/icons/prev.svg)
+#last
+	padding: 0 0 90px
+	background-color: #CCEDE3
+	@media screen and (max-width 650px)
+		padding 0 0 90px
+		background-color #fff
