Main page is all over done

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -29,6 +29,7 @@ mixin fi(cl,im,n, p)
 		+img('for-item-img', 'img/images/'+im+'-'+n+'.png', p)
 		p.for-item-text!=p
 
+<?php require('date/date.php');?>
 doctype html
 html(lang="ru")
 	head
