--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -7,7 +7,7 @@ section#main
 				br.mob-none
 				| ассоциативные карты”
 		p.main-date
-			span 11.11.24 - 11.11.24
+			span <?= $dateDay1Text;?>.<?= $dateMonthTextP;?>.<?=$currentYear;?> - <?= $dateDay2Text;?>.<?= $dateMonthText;?>.<?=$currentYear;?>
 			span 19:00
 		.main-text
 			+img('', 'img/icons/main.svg', 'Блокнот')
