--- a/_app/styl/base/3-header.styl
+++ b/_app/styl/base/3-header.styl
@@ -4,9 +4,12 @@ header
 	margin-bottom: 40px
 .header-logo
 	float left
+	width 135px
 	@media screen and (max-width 991px)
 		float: none
 		width 200px
+	@media screen and (max-width 386px)
+		width 160px
 // .header-menu
 // 	float: right
 // 	text-align center
