--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -7,6 +7,9 @@ footer
 		&:focus
 		&:hover
 			color #000
+	.&-logo
+		width 113px
+		color #000
 	.&-main
 		padding 23px 0 32px
 		border-top: 1px solid #000
