--- a/_app/styl/main/2-plan.styl
+++ b/_app/styl/main/2-plan.styl
@@ -2,6 +2,8 @@
 	padding 90px 0
 	@media screen and (max-width 650px)
 		padding 90px 0 0
+	@media screen and (max-width 480px)
+		padding 60px 0 0
 .day
 	border-radius: 15px
 	border: 2px solid #C77E55
@@ -14,6 +16,8 @@
 	@media screen and (max-width 991px)
 		min-height 1px
 		padding 115px 20px 30px 20px
+	@media screen and (max-width 480px)
+		padding 80px 20px 20px 20px
 	&-num
 		position absolute
 		font-family: FSE
@@ -21,6 +25,8 @@
 		color #77CEB4
 		top 20px
 		right 20px
+		@media screen and (max-width 480px)
+			font-size: 24px
 	&-title
 		font-size: 26px
 		font-weight: bold
@@ -30,5 +36,9 @@
 		align-items: center
 		@media screen and (max-width 650px)
 			font-size: 36px
+		@media screen and (max-width 480px)
+			font-size: 26px
+		@media screen and (max-width 386px)
+			font-size: 22px
 	&-text
 		margin: 10px 0 15px
