--- a/_app/styl/main/4-for.styl
+++ b/_app/styl/main/4-for.styl
@@ -16,11 +16,15 @@
 		padding 70px 40px 40px
 	@media screen and (max-width 991px)
 		min-height 1px
+	@media screen and (max-width 386px)
+		padding 70px 30px 30px
 	&-deepgreen
 		background-color: #55B196
 		color #fff
 		padding 70px 40px 40px
 		font-weight: 600
+		@media screen and (max-width 386px)
+			padding 70px 30px 30px
 	&-img
 		position absolute
 		display block
