--- a/_app/styl/main/6-author.styl
+++ b/_app/styl/main/6-author.styl
@@ -1,5 +1,7 @@
 #author
 	padding 60px 0 90px
+	@media screen and (max-width 480px)
+		padding 60px 0
 .general-title-author
 	margin-top: 60px
 	@media screen and (max-width 1199px)
@@ -33,3 +35,6 @@
 		margin 20px 0 50px
 	@media screen and (max-width 650px)
 		font-size: 24px
+	@media screen and (max-width 480px)
+		font-size: 18px
+		padding 40px 30px
