--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -10,6 +10,8 @@ body
 	line-height: 1.1
 	@media screen and (max-width 650px)
 		font-size: 22px
+	@media screen and (max-width 480px)
+		font-size: 18px
 .wrapper
 	overflow hidden
 .content
@@ -87,6 +89,8 @@ footer
 	@media screen and (max-width 650px)
 		font-size: 22px
 		padding 25px 20px
+	@media screen and (max-width 480px)
+		font-size: 18px
 	&:focus
 		text-decoration none
 		color #fff
@@ -98,6 +102,11 @@ footer
 	font-size: 36px
 	margin-bottom: 80px
 	color #73431F
+	@media screen and (max-width 480px)
+		font-size: 30px
+		margin-bottom: 50px
+	@media screen and (max-width 386px)
+		font-size: 26px
 .mob-none
 	@media screen and (max-width 991px)
 		display none
@@ -106,6 +115,8 @@ footer
 	margin: 60px 0 20px
 	@media screen and (max-width 991px)
 		text-align center
+	@media screen and (max-width 386px)
+		margin-top: 45px
 	span
 		display block
 		color #77CEB4
