--- a/_app/styl/main/7-revs.styl
+++ b/_app/styl/main/7-revs.styl
@@ -55,3 +55,5 @@
 	@media screen and (max-width 650px)
 		padding 0 0 90px
 		background-color #fff
+	@media screen and (max-width 480px)
+		padding 0 0 60px
