--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -13,6 +13,6 @@ section#main
 			+img('', 'img/icons/main.svg', 'Блокнот')
 			p Примите участие в&nbsp;5-ти дневном практикуме и 
 				span получите сертификат 
-		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
+		h4.general-subtitle.general-subtitle-main Зарегистрируйтесь прямо сейчас и получите 
 			span Авторскую колоду метафорических карт
 		+b('', href, 'Принять участие')
