--- a/_app/styl/base/3-header.styl
+++ b/_app/styl/base/3-header.styl
@@ -2,6 +2,8 @@ header
 	overflow hidden
 	padding 20px 0
 	margin-bottom: 40px
+	@media screen and (max-width 386px)
+		margin-bottom: 0
 .header-logo
 	float left
 	width 135px
@@ -9,7 +11,7 @@ header
 		float: none
 		width 200px
 	@media screen and (max-width 386px)
-		width 160px
+		width 100px
 // .header-menu
 // 	float: right
 // 	text-align center
