--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -7,7 +7,7 @@ body
 	font-family: I
 	color #000
 	background-color #fff
-	line-height: 1.1
+	line-height: 1.56
 	@media screen and (max-width 650px)
 		font-size: 22px
 	@media screen and (max-width 480px)
@@ -102,6 +102,7 @@ footer
 	font-size: 36px
 	margin-bottom: 80px
 	color #73431F
+	line-height: 1.3
 	@media screen and (max-width 480px)
 		font-size: 30px
 		margin-bottom: 50px
@@ -117,6 +118,8 @@ footer
 		text-align center
 	@media screen and (max-width 386px)
 		margin-top: 45px
+		&-main
+			margin-top: 20px
 	span
 		display block
 		color #77CEB4
