--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -11,13 +11,15 @@
 		display inline-block
 		border-bottom: 2px solid #55B196
 		padding-bottom: 5px
-		margin-top: 75px
+		margin-top: 0
 		@media screen and (max-width 991px)
 			margin-top: 0
 		@media screen and (max-width 650px)
 			font-size: 22px
 		@media screen and (max-width 480px)
 			font-size: 20px
+		@media screen and (max-width 386px)
+			font-size: 16px
 	&-title
 		font-family: I
 		font-size: 28px
@@ -27,6 +29,10 @@
 			font-size: 22px
 		@media screen and (max-width 480px)
 			font-size: 20px
+		@media screen and (max-width 386px)
+			margin-top: 10px
+			font-size: 18px
+			margin-bottom: 10px
 		span
 			font-family: FSE
 			font-size: 48px
@@ -59,7 +65,8 @@
 		@media screen and (max-width 480px)
 			font-size: 22px
 		@media screen and (max-width 386px)
-			font-size: 20px
+			font-size: 18px
+			line-height: 44px
 		span
 			display inline-block
 			&:last-of-type
@@ -67,8 +74,8 @@
 				padding-left: 20px
 				position relative
 				@media screen and (max-width 386px)
-					margin-left: 15px
-					padding-left: 15px
+					margin-left: 10px
+					padding-left: 10px
 				&:before
 					content: ''
 					display block
@@ -89,10 +96,15 @@
 			max-width none
 		@media screen and (max-width 480px)
 			margin-top: 40px
+		@media screen and (max-width 386px)
+			margin: 20px 0
+			align-items: flex-start
 		img
 			margin-right: 20px
 			@media screen and (max-width 480px)
 				width 80px
+			@media screen and (max-width 386px)
+				width 40px
 		p
 			font-size: 18px
 			margin-top: -22px
@@ -101,6 +113,7 @@
 			@media screen and (max-width 480px)
 				font-size: 20px
 			@media screen and (max-width 386px)
-				font-size: 18px
+				font-size: 16px
+				margin-top: -7px
 			span
 				font-weight: bold
