--- a/_app/styl/main/4-for.styl
+++ b/_app/styl/main/4-for.styl
@@ -6,7 +6,7 @@
 	border-radius: 15px
 	background-color: #CCEDE3
 	margin-top: 70px
-	padding 70px 70px 40px
+	padding 70px 50px 40px
 	display flex
 	align-items: center
 	justify-content: center
@@ -14,6 +14,7 @@
 	min-height 270px
 	@media screen and (max-width 1199px)
 		padding 70px 40px 40px
+		min-height 335px
 	@media screen and (max-width 991px)
 		min-height 1px
 	@media screen and (max-width 386px)
