--- a/_app/styl/main/6-author.styl
+++ b/_app/styl/main/6-author.styl
@@ -9,7 +9,9 @@
 	@media screen and (max-width 991px)
 		display none
 .general-title-author-mob
-	display block
+	display none
+	@media screen and (max-width 991px)
+		display block
 .author-img
 	display block
 	width 100%
@@ -27,7 +29,7 @@
 	padding 60px 35px
 	color #fff
 	font-weight: 900
-	margin-top: 77px
+	margin-top: 25px
 	line-height: 1.5
 	@media screen and (max-width 1199px)
 		margin-top: 30px
