--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -116,10 +116,11 @@ footer
 	margin: 60px 0 20px
 	@media screen and (max-width 991px)
 		text-align center
-	@media screen and (max-width 386px)
+	@media screen and (max-width 425px)
 		margin-top: 45px
 		&-main
 			margin-top: 20px
+			font-size: 16px
 	span
 		display block
 		color #77CEB4
