--- a/_app/styl/main/7-revs.styl
+++ b/_app/styl/main/7-revs.styl
@@ -11,9 +11,11 @@
 .slick-list
 	border-radius: 15px
 .text-rev-img
-	height: 182px
+	height: 200px
+	object-fit: contain
+	object-position: center
 	width 480px
-	background-color #fff
+	background-color #ECF3F3
 	border-radius: 15px
 	display block
 	margin: 0 auto
@@ -22,6 +24,7 @@
 	@media screen and (max-width 535px)
 		width 300px
 	@media screen and (max-width 438px)
+		height: 120px
 		width 200px
 	@media screen and (max-width 338px)
 		width 150px
