--- a/_app/pug/main/7-revs.pug
+++ b/_app/pug/main/7-revs.pug
@@ -2,8 +2,8 @@ section#revs
 	.container
 		+gt('', 'Отзывы о практикуме')
 		.revs-slider-text
-			each n in [1,2,3,4,5,6,7,8]
-				a.text-rev-link(href=path+"img/revs/text-"+n+".jpg" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".min.jpg", alt="Отзыв "+n).text-rev-img
+			each n in [1,2,3,4,5,6,7,8,9,10]
+				a.text-rev-link(href=path+"img/revs/text-"+n+".png" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".png", alt="Отзыв "+n).text-rev-img
 section#last
 	.container
 		h4.general-subtitle Зарегистрируйтесь прямо сейчас и получите 
