--- a/_app/styl/base/3-header.styl
+++ b/_app/styl/base/3-header.styl
@@ -2,16 +2,17 @@ header
 	overflow hidden
 	padding 20px 0
 	margin-bottom: 40px
-	@media screen and (max-width 386px)
+	@media screen and (max-width 425px)
 		margin-bottom: 0
+		padding 10px 0
 .header-logo
 	float left
 	width 135px
 	@media screen and (max-width 991px)
 		float: none
 		width 200px
-	@media screen and (max-width 386px)
-		width 100px
+	@media screen and (max-width 425px)
+		width 60px
 // .header-menu
 // 	float: right
 // 	text-align center
