--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -18,8 +18,8 @@
 			font-size: 22px
 		@media screen and (max-width 480px)
 			font-size: 20px
-		@media screen and (max-width 386px)
-			font-size: 16px
+		@media screen and (max-width 425px)
+			font-size: 14px
 	&-title
 		font-family: I
 		font-size: 28px
@@ -29,9 +29,9 @@
 			font-size: 22px
 		@media screen and (max-width 480px)
 			font-size: 20px
-		@media screen and (max-width 386px)
+		@media screen and (max-width 425px)
 			margin-top: 10px
-			font-size: 18px
+			font-size: 16px
 			margin-bottom: 10px
 		span
 			font-family: FSE
@@ -44,8 +44,8 @@
 				font-size: 38px
 			@media screen and (max-width 480px)
 				font-size: 30px
-			@media screen and (max-width 386px)
-				font-size: 22px
+			@media screen and (max-width 425px)
+				font-size: 18px
 			&:before
 				content: '”'
 				display block
@@ -64,8 +64,8 @@
 		line-height: 52px
 		@media screen and (max-width 480px)
 			font-size: 22px
-		@media screen and (max-width 386px)
-			font-size: 18px
+		@media screen and (max-width 425px)
+			font-size: 16px
 			line-height: 44px
 		span
 			display inline-block
@@ -73,7 +73,7 @@
 				margin-left: 20px
 				padding-left: 20px
 				position relative
-				@media screen and (max-width 386px)
+				@media screen and (max-width 425px)
 					margin-left: 10px
 					padding-left: 10px
 				&:before
@@ -96,15 +96,16 @@
 			max-width none
 		@media screen and (max-width 480px)
 			margin-top: 40px
-		@media screen and (max-width 386px)
-			margin: 20px 0
+		@media screen and (max-width 425px)
+			margin: 20px 0 15px
 			align-items: flex-start
 		img
 			margin-right: 20px
 			@media screen and (max-width 480px)
 				width 80px
-			@media screen and (max-width 386px)
-				width 40px
+			@media screen and (max-width 425px)
+				width 30px
+				margin-right: 10px
 		p
 			font-size: 18px
 			margin-top: -22px
@@ -112,8 +113,9 @@
 				font-size: 22px
 			@media screen and (max-width 480px)
 				font-size: 20px
-			@media screen and (max-width 386px)
+			@media screen and (max-width 425px)
 				font-size: 16px
 				margin-top: -7px
+				line-height: 1.2
 			span
 				font-weight: bold
